working on header

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
 	</head>
 	<body>
 		<section class="container">
-			<header>
+			<header class="site-header">
 				<brand-logo></brand-logo>
-				<hamburger-nav></hamburger-nav>
+				<nav>
+					<hamburger-nav></hamburger-nav>
+				</nav>
 			</header>
 			<main>
 				<section class="hero-section"></section>
