--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
