working on hero section

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="./images/favicon-32x32.png"
+			href="images/favicon-32x32.png"
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,35 +43,57 @@
 				<hamburger-nav></hamburger-nav>
 			</header>
 			<main>
-				<section class="hero-section"></section>
-				<section class="shorten-link-section"></section>
-				<section class="statistics-section"></section>
+				<section class="hero-section">
+					<section class="hero-section__content">
+						<section  class="hero-section__image">
+							<img src="images/illustration-working.svg" alt="Illustration working">
+						</section>
+						<section class="hero-section__text">
+							<h1 class="hero-section__title">More than just shorter links</h1>
+							<p class="hero-section__description description">Build your brand's recognition and get detailed insights on how your links are performing.</p>
+							<button class="btn__signup hero-section__btn">Get Started</button>
+						</section>
+					</section>
+				</section>
+
+				<section class="shorten-link-section">
+					<section class="shorten-link-section__content">
+
+					</section>
+				</section>
+				<section class="statistics-section">
+					<section class="statistics-section__content">
+
+					</section>
+				</section>
 				<section class="get-started-section"></section>
 			</main>
 			<footer>
-				<h2>Shortly</h2>
-				<ul class="features">
-					<li><a href="#"></a>Link Shortening</li>
-					<li><a href="#"></a>Branded Links</li>
-					<li><a href="#"></a>Analytics</li>
-				</ul>
-				<ul class="resources">
-					<li><a href="#"></a>Blog</li>
-					<li><a href="#"></a>Developers</li>
-					<li><a href="#"></a>Support</li>
-				</ul>
-				<ul class="features">
-					<li><a href="#"></a>About</li>
-					<li><a href="#"></a>Our Teams</li>
-					<li><a href="#"></a>Careers</li>
-					<li><a href="#"></a>Contact</li>
-				</ul>
-				<ul class="socials">
-					<i>Facebook</i>
-					<i>Twitter</i>
-					<i>Pinterest</i>
-					<i>Instagram</i>
-				</ul>
+				<section class="footer__content">
+					<h2>Shortly</h2>
+					<ul class="features">
+						<li><a href="#"></a>Link Shortening</li>
+						<li><a href="#"></a>Branded Links</li>
+						<li><a href="#"></a>Analytics</li>
+					</ul>
+					<ul class="resources">
+						<li><a href="#"></a>Blog</li>
+						<li><a href="#"></a>Developers</li>
+						<li><a href="#"></a>Support</li>
+					</ul>
+					<ul class="features">
+						<li><a href="#"></a>About</li>
+						<li><a href="#"></a>Our Teams</li>
+						<li><a href="#"></a>Careers</li>
+						<li><a href="#"></a>Contact</li>
+					</ul>
+					<ul class="socials">
+						<i>Facebook</i>
+						<i>Twitter</i>
+						<i>Pinterest</i>
+						<i>Instagram</i>
+					</ul>
+				</section>
 			</footer>
 		</section>
 	</body>
