add shorten link component

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title><%= htmlWebpackPlugin.options.title %></title>
+		<title>Shortly</title>
 	</head>
 	<body>
 		<section class="container">
@@ -51,16 +51,16 @@
 						<section class="hero-section__text">
 							<h1 class="hero-section__title">More than just shorter links</h1>
 							<p class="hero-section__description description">Build your brand's recognition and get detailed insights on how your links are performing.</p>
-							<button class="btn__signup hero-section__btn">Get Started</button>
+							<button class="btn__signup hero-section__btn-get-started">Get Started</button>
 						</section>
 					</section>
 				</section>
 
 				<section class="shorten-link-section">
 					<section class="shorten-link-section__content">
-
-					</section>
+						<shorten-link></shorten-link>
 				</section>
+
 				<section class="statistics-section">
 					<section class="statistics-section__content">
 
