working on shorten-link section

--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,15 @@
 				<section class="shorten-link-section">
 					<section class="shorten-link-section__content">
 						<shorten-link></shorten-link>
-				</section>
 
-				<section class="statistics-section">
-					<section class="statistics-section__content">
+						<section class="statistics-section">
+							lorem
 
+						</section>
 					</section>
 				</section>
+
+
 				<section class="get-started-section"></section>
 			</main>
 			<footer>
