add form validation

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 				</section>
 
 				<section class="shorten-link-section">
-					<section class="shorten-link-section__content">
+					<section class=" ">
 						<shorten-link></shorten-link>
 
 						<section class="statistics-section">
